# Kind

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: probe1.yaml
kind/: __init__.py
schemas/: v0.1.0.json  v0.2.0.json  v0.3.0.json  v0.4.0.json  v0.5.0.json  v0.6.0.json  v0.7.0.json  v0.8.0.json  v0.9.0.json
scripts/: analyze_boundary.py  call_mirror.py  fire_perturbation.py  migrate_phase_13_for_phase_9.py  monitor_probe4_run.py  perturb_dream_envelope.py  probe1_5_compare_controls.py  probe1_5_control_frozen_target.py  probe2_lesion_init_zero_scalar_column.py  probe3_5_close_archive.py  probe3_5_f1_decoder_recalibration.py  probe3_5_phase3_retro_torpor.py  probe3_5_seek_classifier.py  probe4_phase3_analysis.py  recalibrate_probe3_5_energy.py  run_phase_12_smoke.py  run_phase_13_calibration.py  run_phase_9_judge_smoke.py  run_probe1.py  run_probe1_5.py  run_probe3_5_amended_gate.py  run_probe3_5_oracle_feasibility.py  run_probe3_5_phase1_baseline.py  run_probe3_5_phase2_smoke.py  run_probe3_5_phase2_step0_baseline.py  run_probe3_5_phase3_positive_control.py  run_probe4_5_phase1_honest_instrument.py  run_probe4_5_phase2_belief_error_profile.py  run_probe4_5_phase2_oracle_gate.py  run_probe4_5_phase3_pilot.py  run_probe4_5_phase3_validation.py  run_probe4_phase2_smoke.py  run_probe4_phase3_positive_control.py  run_probe4_phase3_positive_control_v2.py  run_probe4_phase4_biography.py  run_window.py  smoke_mps.py  smoke_probe1_5.py  smoke_probe3_visibility.py
tests/: _actor_telemetryview_attempt.py  conftest.py  test_actor.py  test_bloom.py  (+98 more)
(+202 files in other folders)
