[project]
name = "kind"
version = "0.1.0"
description = "An investigation into subjectivity through construction."
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2",
    "safetensors>=0.4",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "anthropic>=0.34",
    "google-genai>=1.0",
    "python-dotenv>=1.0",
    "pyarrow>=15.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["kind*"]
exclude = ["tests*", "Arc*"]
